--- a/src/pages/meus-problemas/meus-problemas.html
+++ b/src/pages/meus-problemas/meus-problemas.html
@@ -18,4 +18,7 @@
       <ion-icon name="ios-arrow-dropright" item-end></ion-icon>      
     </ion-item>
   </ion-list>
+  <div *ngIf="problemas.length == 0" style="text-align: center;">
+    <img src="assets/imgs/semProblemas.png"/>
+  </div>
 </ion-content>
